--- a/style.css
+++ b/style.css
@@ -43,3 +43,31 @@ body{
     padding-left: 70px;
 
 }
+
+.hero-banner{
+    background: url("./assets/web-design-training-assignment/images/hero-banner.jpg");
+    width: 100%;
+    height: 825px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 100px;
+}
+
+.heading{
+    font-weight:bold;
+    font-size: 70px;
+    font-family: Montserrat;
+    color: #333333;
+    margin-bottom: 25px;
+}
+
+.subheading{
+    font-weight: 500;
+    font-size: 28px;
+    font-family: Montserrat;
+    color: #333333;
+}
