--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ body{
 
 }
 
-.hero-banner{
+#hero-banner{
     background: url("./assets/web-design-training-assignment/images/hero-banner.jpg");
     width: 100%;
     height: 825px;
@@ -70,4 +70,47 @@ body{
     font-size: 28px;
     font-family: Montserrat;
     color: #333333;
+}
+
+#About-Us{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
+
+.title{
+    display: flex;
+    font-weight:600;
+    font-size: 36px;
+    font-family: Montserrat;
+    color: #333333;
+    justify-items: center;
+    width: 100%;
+    margin-left:320px ;
+
+}
+
+
+.content{
+    margin-left:220px ;
+    margin-right:220px ;
+    justify-items: start;
+    align-items: center;
+    font-weight:normal;
+    font-size: 16px;
+    font-family: Montserrat;
+    color: #333333;
+    word-wrap: break-word;
+    line-height: 1.6;
+}
+.btn{
+    margin-bottom: 100px;
+    margin-top: 50px;
+    font-size: 16px;
+    font-family: Montserrat;
+    color: #333333;
+    justify-items: center;
+    border-radius: 4px;
+    padding: 20px 40px;
+    border:2px solid #333333;
 }
