--- a/style.css
+++ b/style.css
@@ -114,3 +114,30 @@ body{
     padding: 20px 40px;
     border:2px solid #333333;
 }
+#project-section{
+    height: 90vh;
+    background-color: #f7fbff;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.paratitle{
+    margin-top: 100px;
+    margin-bottom: 50px;
+}
+
+.projects{
+    margin-left: 100px;
+    margin-right: 100px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap:34px;
+}
+
+.projects img{
+    height: 250px;
+    width: 400px;
+}
