--- a/style.css
+++ b/style.css
@@ -146,3 +146,44 @@ body{
     background: #333333;
     color:#ffffff;
 }
+
+.heading2{
+    font-weight:600;
+    font-size: 36px;
+    font-family: Montserrat;
+    color: #333333;
+    width: 100%;
+    
+}
+.caption{
+    font-weight:normal;
+    font-size: 18px;
+    font-family: Montserrat;
+    color: #333333;
+    margin-bottom: 34px;
+}
+
+.socials{
+    padding:10px;
+    margin-bottom: 100px;
+}
+.heading3{
+    margin-left: 300px;
+    display: flex;
+    margin-top: 45px;
+    margin-bottom: 45px;
+    font-weight:light;
+    font-size: 16px;
+    font-family: Montserrat;
+    color: #333333;
+}
+.line{
+    border: 1px solid #f2f2f2;
+}
+.footerbody{
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+  
+}
