--- a/style.css
+++ b/style.css
@@ -12,62 +12,67 @@ body{
 
 #navbar{
     font-weight: 500;
-    font-size: 16px;
+    font-size: 1rem;
     font-family: Montserrat;
     color: #333333;
-    margin-left: 375px;
-    margin-right: 375px;
+    margin-left: 23.45rem;
+    margin-right: 23.45rem;
     height: 6rem;
     display: flex;
     justify-content: space-around;
     align-items: center;
-    box-shadow: 20px;
-    padding-top: 65px;
-    padding-bottom: 65px;
+    box-shadow: 1.25rem;
+    padding-top: 4rem;
+    padding-bottom: 4rem;
 }
 
 .logo{
-    margin-top: 50px;
-    margin-bottom: 50px;
+    margin-top: 3rem;
+    margin-bottom: 3rem;
 }
 
-
+@media only screen and (max-width: 768px) {
+.logo{
+    margin-top: 25px;
+    margin-bottom: 25px;
+}
+}
 .routes{
-    margin: 505px;
+    margin: 31.5rem;
     display: flex;
 }
 
 .routes a{
     text-decoration: none;
     color: black;
-    padding-left: 70px;
+    padding-left: 4.25rem;
 
 }
 
 #hero-banner{
     background: url("./assets/web-design-training-assignment/images/hero-banner.jpg");
-    width: 100%;
-    height: 825px;
-    background-size: cover;
+    width: 100wh;
+    height: 80vh;
+    background-size:contain;
     background-repeat: no-repeat;
     justify-content: center;
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-bottom: 100px;
+    margin-bottom: 6rem;
 }
 
 .heading{
     font-weight:bold;
-    font-size: 70px;
+    font-size: 4.5rem;
     font-family: Montserrat;
     color: #333333;
-    margin-bottom: 25px;
+    margin-bottom: 1.5rem;
 }
 
 .subheading{
     font-weight: 500;
-    font-size: 28px;
+    font-size: 1.75rem;
     font-family: Montserrat;
     color: #333333;
 }
@@ -75,43 +80,43 @@ body{
 #About-Us{
     display: flex;
     justify-content: center;
-    width: 100%;
+    width: 100wh;
 }
 
 .title{
     display: flex;
     font-weight:600;
-    font-size: 36px;
+    font-size: 2rem;
     font-family: Montserrat;
     color: #333333;
     justify-items: center;
     width: 100%;
-    margin-left:320px ;
+    margin-left:20rem ;
 
 }
 
 
 .content{
-    margin-left:220px ;
-    margin-right:220px ;
+    margin-left:13.75rem ;
+    margin-right:13.75rem ;
     justify-items: start;
     align-items: center;
     font-weight:normal;
-    font-size: 16px;
+    font-size: 1rem;
     font-family: Montserrat;
     color: #333333;
     word-wrap: break-word;
     line-height: 1.6;
 }
 .btn{
-    margin-bottom: 100px;
-    margin-top: 50px;
-    font-size: 16px;
+    margin-bottom: 6rem;
+    margin-top: 3rem;
+    font-size: 1rem;
     font-family: Montserrat;
     color: #333333;
     justify-items: center;
-    border-radius: 4px;
-    padding: 20px 40px;
+    border-radius: 0.25rem;
+    padding: 1.25rem 2.25rem;
     border:2px solid #333333;
 }
 #project-section{
@@ -123,23 +128,23 @@ body{
 }
 
 .paratitle{
-    margin-top: 100px;
-    margin-bottom: 50px;
+    margin-top: 6rem;
+    margin-bottom: 3rem;
 }
 
 .projects{
-    margin-left: 100px;
-    margin-right: 100px;
+    margin-left: 6rem;
+    margin-right: 6rem;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
-    gap:34px;
+    gap:2rem;
 }
 
 .projects img{
-    height: 250px;
-    width: 400px;
+    height: 15.5rem;
+    width: 25rem;
 }
 
 .effect1:hover{
@@ -149,7 +154,7 @@ body{
 
 .heading2{
     font-weight:600;
-    font-size: 36px;
+    font-size: 2rem;
     font-family: Montserrat;
     color: #333333;
     width: 100%;
@@ -157,23 +162,23 @@ body{
 }
 .caption{
     font-weight:normal;
-    font-size: 18px;
+    font-size: 1.2rem;
     font-family: Montserrat;
     color: #333333;
-    margin-bottom: 34px;
+    margin-bottom: 2rem;
 }
 
 .socials{
-    padding:10px;
-    margin-bottom: 100px;
+    padding:0.65rem;
+    margin-bottom: 6rem;
 }
 .heading3{
-    margin-left: 300px;
+    margin-left: 18.75rem;
     display: flex;
-    margin-top: 45px;
-    margin-bottom: 45px;
+    margin-top: 2.75rem;
+    margin-bottom: 2.75rem;
     font-weight:light;
-    font-size: 16px;
+    font-size: 1rem;
     font-family: Montserrat;
     color: #333333;
 }
