--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ body{
     background: url("./assets/web-design-training-assignment/images/hero-banner.jpg");
     width: 100wh;
     height: 80vh;
-    background-size:contain;
+    background-size:cover;
     background-repeat: no-repeat;
     justify-content: center;
     display: flex;
@@ -69,7 +69,12 @@ body{
     color: #333333;
     margin-bottom: 1.5rem;
 }
-
+@media only screen and (max-width: 768px) {
+   
+    .heading{
+        font-size: 3rem;
+    }
+}
 .subheading{
     font-weight: 500;
     font-size: 1.75rem;
@@ -79,8 +84,14 @@ body{
 
 #About-Us{
     display: flex;
+    flex-direction: row;
     justify-content: center;
-    width: 100wh;
+}
+@media only screen and (max-width: 768px) {
+    #About-Us{
+        flex-direction: column;
+        align-items: center;
+    }
 }
 
 .title{
@@ -90,12 +101,18 @@ body{
     font-family: Montserrat;
     color: #333333;
     justify-items: center;
-    width: 100%;
-    margin-left:20rem ;
-
+    margin-left:20rem;
 }
 
-
+@media only screen and (max-width: 768px) {
+    .title {
+     font-size: 1.5rem;
+     margin-left: 0;
+     text-align: center;
+     text-justify:center;
+     margin-bottom: 2rem;
+    }
+}
 .content{
     margin-left:13.75rem ;
     margin-right:13.75rem ;
@@ -108,6 +125,19 @@ body{
     word-wrap: break-word;
     line-height: 1.6;
 }
+
+@media only screen and (max-width: 768px) {
+    .content{
+        display: flex;
+        flex-direction:column ;
+        align-items: center;
+        justify-content: center;
+        line-height: 1.2;
+        margin-left: 1rem;
+        margin-right: 1rem;
+    }
+}
+
 .btn{
     margin-bottom: 6rem;
     margin-top: 3rem;
@@ -125,6 +155,16 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+@media only screen and (max-width: 768px) {
+    #project-section{
+        height: auto;
+    background-color: #f7fbff;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    }
 }
 
 .paratitle{
@@ -182,8 +222,19 @@ body{
     font-family: Montserrat;
     color: #333333;
 }
+@media only screen and (max-width: 768px) {
+    .heading3{
+        display: flex;
+        flex-direction:column ;
+        align-items: center;
+        justify-content: center;
+    }
+}
 .line{
     border: 1px solid #f2f2f2;
+}
+#footer{
+    margin: 0.5rem;
 }
 .footerbody{
     justify-content: center;
