--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ body{
 
 #hero-banner{
     background: url("./assets/web-design-training-assignment/images/hero-banner.jpg");
-    width: 100wh;
+    width: 100%;
     height: 80vh;
     background-size:cover;
     background-repeat: no-repeat;
@@ -90,13 +90,15 @@ body{
 }
 
 #About-Us{
+    margin-left:15rem ;
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-self: center;
 }
 @media only screen and (max-width: 1200px) {
     
     #About-Us{
+        margin-left: 0;
         justify-content: center;
         align-items: center;
         display:flex;
@@ -111,7 +113,6 @@ body{
     font-size: 2rem;
     font-family: Montserrat;
     color: #333333;
-    margin-left:20rem;
 }
 
 @media only screen and (max-width: 768px) {
@@ -195,6 +196,7 @@ body{
 }
 
 .projects img{
+    padding: 1rem;
     height: 15.5rem;
     width: 25rem;
 }
